--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "formik": "^2.2.9",
     "gatsby": "^3.6.2",
     "gatsby-image": "^3.10.0",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
@@ -26,7 +27,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "sass": "^1.35.1"
+    "sass": "^1.35.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "prettier": "2.2.1"
